--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes</title>
-
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="head">Odin Recipes</h1>
         <ul>
-            <li><a href="recipes/borscht.html">Borscht</a></li>
-            <li><a href="recipes/Olivye.html">Olivye</a></li>
-            <li><a href="recipes/Varenyky.html">Varenyky</a></li>
+            <li><a id="Borscht" href="recipes/borscht.html">Borscht</a></li>
+            <li><a id="Olivye" href="recipes/Olivye.html">Olivye</a></li>
+            <li><a id ="Varenyky" href="recipes/Varenyky.html">Varenyky</a></li>
         </ul>
 
     </body>
