--- a/recipes/borscht.html
+++ b/recipes/borscht.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="../style.css">
         <meta charset="utf-8">
         <title>Borscht recipe</title>
     </head>
     <body>
-        <h1>Borscht</h1>
-        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2020%2F09%2F03%2FUkrainian-Red-Borscht-Soup.jpg&q=60&c=sc&poi=auto&orient=true&h=512" alt="Finished Borscht photo" height="300" width="300">
-        <h2>Description</h2>
+        <h1 class="heading h1">Borscht</h1>
+        <img class="foodimg" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2020%2F09%2F03%2FUkrainian-Red-Borscht-Soup.jpg&q=60&c=sc&poi=auto&orient=true&h=512" alt="Finished Borscht photo" height="300" width="300">
+        <h2 class="heading">Description</h2>
         <p>This borscht recipe is delicious, nutritious, and full of flavor. Plus, its gorgeous red hue is absolutely stunning!</p>
         <p>Borscht is a sour soup that is traditionally made with meat stock and boiled vegetables. The Ukrainian version, which features beets, is perhaps the most well known type — but varieties of borscht can be found throughout Central and Eastern Europe and Northern Asia. </p>
         
-        <h2>Ingredients</h2>
+        <h2 class="heading">Ingredients</h2>
         <ul>
             <li>Sausage: This Ukrainian borscht recipe starts with a pound of pork sausage. </li>
             <li>Vegetables: You’ll need beets, carrots, baking potatoes, cabbage, and an onion. </li>
