Changes after Block and Inline

--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
     </head>
 
     <body>
-        <h1 class="head">Odin Recipes</h1>
-        <ul>
-            <li><a id="Borscht" href="recipes/borscht.html">Borscht</a></li>
-            <li><a id="Olivye" href="recipes/Olivye.html">Olivye</a></li>
-            <li><a id ="Varenyky" href="recipes/Varenyky.html">Varenyky</a></li>
-        </ul>
-
+        
+        <div class="card">
+            <div class="head">
+                <h1 class="title">Odin Recipes</h1>
+            </div>
+            <div class="links">
+                <ul class="link-list">
+                    <li><a id="borscht" href="recipes/borscht.html">Borscht</a></li>
+                    <li><a href="recipes/Olivye.html">Olivye</a></li>
+                    <li><a href="recipes/Varenyky.html">Varenyky</a></li>
+                </ul>
+            </div>
+        </div>
     </body>
 
 </html>
